c4prj2_input/grade.txt
Grading at Wed Nov 25 09:29:00 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:19:14: error: assignment of read-only location ‘*(line + (sizetype)((long unsigned int)i * 1ul))’
    if(line[i]=';')
              ^
input.c:23:27: error: lvalue required as left operand of assignment
    if(line[i]=' '||line[i]=',')
                           ^
input.c:27:19: error: assignment of read-only location ‘*(line + (sizetype)((long unsigned int)i * 1ul))’
    else if(line[i]='?')
                   ^
input.c: At top level:
input.c:52:50: error: unknown type name ‘futrue_cards_t’
 deck_t ** read_input (FILE *f, size_t * n_hands, futrue_cards_t * fc)
                                                  ^
Compilation of input.c failed

Overall Grade: F
